# Luminary-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  body_embed.py  face_embed.py
scripts/: _paths.py  analyze_motion.py  apply_backfill_stats.py  apply_footage.py  backfill_bust.py  backfill_faces.py  backfill_stats.py  extract_seeds.py  fetch_iafd.py  fetch_milfs_stats.py  figure_physics.py  figure_scan.py  footage_yield.py  refine_frames.py  retry_weights.py  run_motion_batch.py  seg_validate.py  tag_profiles.py
src/: blend.rs  commands.rs  config.rs  database.rs  embedder.rs  eval.rs  image_cache.rs  lib.rs  main.rs  models.rs  pichunter.rs  pornpics.rs  query.rs  recommender.rs  scraper.rs  source.rs  stashdb.rs  tpdb.rs
src/cli/: eval.rs  mlindex.rs  mod.rs  search.rs
src/cli/mlindex/: body.rs
src/cli/search/: measure.rs  overall.rs
src/database/: corpus.rs
tests/: recommender_flow.rs
